# downloader

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  gitconfig  readme.md
.github/workflows/: container.yml  rust.yml
src/: additionals.rs  event.rs  event_entry.rs  events_git.rs  files.rs  http.rs  ics_to_json.rs  ics_urls.rs  main.rs  v4.rs
