[package]
name = "hawhh-calendarbot-downloader"
description = "This tool downloads ICS Files and parses them into a generic JSON known to this project"
version = "3.1.1"
license = "AGPL-3.0-or-later"
repository = "https://github.com/HAWHHCalendarBot/downloader"
authors = ["EdJoPaTo <calendarbot-downloader@edjopato.de>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# See https://doc.rust-lang.org/rustc/codegen-options/index.html
codegen-units = 1
lto = true

[dependencies]
chrono = "0.4"
chrono-tz = "0.8"
encoding = "0.2"
itertools = "0.10"
regex = "1"
serde_json = "1"
ureq = "2"
url = "2"

[dependencies.serde]
version = "1"
features = ["derive"]
