[package]
name = "hawhh-calendarbot-downloader"
description = "This tool downloads ICS Files and parses them into a generic JSON known to this project"
version = "3.3.1"
license = "AGPL-3.0-or-later"
repository = "https://github.com/HAWHHCalendarBot/downloader"
authors = ["EdJoPaTo <calendarbot-downloader@edjopato.de>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
unsafe_code = "forbid"
[lints.clippy]
pedantic = "warn"
nursery = "warn"

[profile.release]
# See https://doc.rust-lang.org/cargo/reference/profiles.html
codegen-units = 1
lto = true
strip = "debuginfo"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
chrono-tz = "0.8"
encoding = "0.2"
lazy-regex = "3"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "2"
url = "2"
