[package]
name = "hawhh-calendarbot-downloader"
description = "This tool downloads ICS Files and parses them into a generic JSON known to this project"
version = "4.0.2"
license = "AGPL-3.0-or-later"
repository = "https://github.com/HAWHHCalendarBot/downloader"
authors = ["EdJoPaTo <calendarbot-downloader@edjopato.de>"]
edition = "2021"

[lints.rust]
unsafe_code = "forbid"
unused_qualifications = "warn"
[lints.clippy]
pedantic = "warn"
nursery = "warn"

[profile.release]
codegen-units = 1
lto = true

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
chrono-tz = "0.10"
encoding = "0.2"
lazy-regex = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "2"
url = "2"
